package NYT.NSecurityClient.NProto;

////////////////////////////////////////////////////////////////////////////////

message TReqAddMember
{
    required string name = 1;
}

message TRspAddMember
{ }

////////////////////////////////////////////////////////////////////////////////

message TReqRemoveMember
{
    required string name = 1;
}

message TRspRemoveMember
{ }

////////////////////////////////////////////////////////////////////////////////
